feat: add android build and tests