@@ -5,12 +5,13 @@ import org.osservatorionessuno.libmvt.common.Indicators;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class DumpsysBatteryDailyTest {
     private String readResource(String name) throws Exception {
-        Path path = Path.of("src", "test", "resources", name);
+        Path path = Paths.get("src", "test", "resources", name);
         return Files.readString(path);
     }
 
@@ -27,7 +28,7 @@ public class DumpsysBatteryDailyTest {
         DumpsysBatteryDaily bd = new DumpsysBatteryDaily();
         String data = readResource("android_data/dumpsys_battery.txt");
         bd.parse(data);
-        Indicators ind = Indicators.loadFromDirectory(Path.of("src", "test", "resources", "iocs").toFile());
+        Indicators ind = Indicators.loadFromDirectory(Paths.get("src", "test", "resources", "iocs").toFile());
         bd.setIndicators(ind);
         bd.checkIndicators();
         assertEquals(1, bd.getDetected().size());
