@@ -5,13 +5,14 @@ import org.osservatorionessuno.libmvt.common.Indicators;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class DumpsysPackageActivitiesTest {
     private String readResource(String name) throws Exception {
-        Path path = Path.of("src", "test", "resources", name);
+        Path path = Paths.get("src", "test", "resources", name);
         return Files.readString(path);
     }
 
@@ -32,7 +33,7 @@ public class DumpsysPackageActivitiesTest {
         DumpsysPackageActivities dpa = new DumpsysPackageActivities();
         String data = readResource("android_data/dumpsys_packages.txt");
         dpa.parse(data);
-        Indicators ind = Indicators.loadFromDirectory(Path.of("src", "test", "resources", "iocs").toFile());
+        Indicators ind = Indicators.loadFromDirectory(Paths.get("src", "test", "resources", "iocs").toFile());
         dpa.setIndicators(ind);
         dpa.checkIndicators();
         assertEquals(0, dpa.getDetected().size());
