@@ -5,13 +5,14 @@ import org.osservatorionessuno.libmvt.common.Indicators;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class DumpsysReceiversTest {
     private String readResource(String name) throws Exception {
-        Path path = Path.of("src", "test", "resources", name);
+        Path path = Paths.get("src", "test", "resources", name);
         return Files.readString(path);
     }
 
@@ -32,7 +33,7 @@ public class DumpsysReceiversTest {
         DumpsysReceivers dr = new DumpsysReceivers();
         String data = readResource("android_data/dumpsys_packages.txt");
         dr.parse(data);
-        Indicators ind = Indicators.loadFromDirectory(Path.of("src", "test", "resources", "iocs").toFile());
+        Indicators ind = Indicators.loadFromDirectory(Paths.get("src", "test", "resources", "iocs").toFile());
         dr.setIndicators(ind);
         dr.checkIndicators();
         assertEquals(0, dr.getDetected().size());
