@@ -6,13 +6,14 @@ import org.osservatorionessuno.libmvt.common.IndicatorType;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class GetPropTest {
     private String readResource(String name) throws Exception {
-        Path path = Path.of("src", "test", "resources", name);
+        Path path = Paths.get("src", "test", "resources", name);
         return Files.readString(path);
     }
 
@@ -33,7 +34,7 @@ public class GetPropTest {
         GetProp gp = new GetProp();
         String data = readResource("android_data/getprop.txt");
         gp.parse(data);
-        Indicators indicators = Indicators.loadFromDirectory(Path.of("src", "test", "resources", "iocs").toFile());
+        Indicators indicators = Indicators.loadFromDirectory(Paths.get("src", "test", "resources", "iocs").toFile());
         gp.setIndicators(indicators);
         gp.checkIndicators();
         assertTrue(gp.getDetected().size() > 0);
