@@ -6,13 +6,14 @@ import org.osservatorionessuno.libmvt.common.IndicatorType;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class ProcessesTest {
     private String readResource(String name) throws Exception {
-        Path path = Path.of("src", "test", "resources", name);
+        Path path = Paths.get("src", "test", "resources", name);
         return Files.readString(path);
     }
 
@@ -32,7 +33,7 @@ public class ProcessesTest {
         Processes p = new Processes();
         String data = readResource("android_data/ps.txt");
         p.parse(data);
-        Indicators indicators = Indicators.loadFromDirectory(Path.of("src", "test", "resources", "iocs").toFile());
+        Indicators indicators = Indicators.loadFromDirectory(Paths.get("src", "test", "resources", "iocs").toFile());
         p.setIndicators(indicators);
         p.checkIndicators();
         assertTrue(p.getDetected().size() > 0);
@@ -44,7 +45,7 @@ public class ProcessesTest {
         String data = "USER PID PPID VSZ RSS WCHAN ADDR S NAME\n" +
                 "root 50 2 0 0 0 0 S com.bad.actor.ma\n";
         p.parse(data);
-        Indicators indicators = Indicators.loadFromDirectory(Path.of("src", "test", "resources", "iocs").toFile());
+        Indicators indicators = Indicators.loadFromDirectory(Paths.get("src", "test", "resources", "iocs").toFile());
         p.setIndicators(indicators);
         p.checkIndicators();
         assertFalse(p.getDetected().isEmpty());
